Bug 270631 - When migrating from 4.4 to 4.6, kres-migrator isn't run.
Summary: When migrating from 4.4 to 4.6, kres-migrator isn't run.
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Migration (other bugs)
Version First Reported In: 4.7
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-11 00:13 UTC by Sergio Martins
Modified: 2011-08-03 10:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio Martins 2011-04-11 00:13:50 UTC
Version:           GIT (master)
OS:                Linux

When migrating from 4.4 to 4.6, kres-migrator isn't run.

Reproducible: Didn't try

Steps to Reproduce:
Create an empty user.
Run kontact 4.4 and add some calendars.
Upgrade to kdepim-master.
Run kontact.
Comment 1 Volker Krause 2011-05-02 15:13:38 UTC
Could you please post your kres-migratorrc?
Comment 2 Volker Krause 2011-05-02 17:02:59 UTC
Even better if you could provide it for every step btw, instead of just the end result.
Comment 3 Sergio Martins 2011-05-02 17:51:58 UTC
1. Created a new user on my arch system ( 4.4 )

2. Started Kontact

[Migration]
Version-calendar=2
Version-contact=2

3. Created an ical calendar

4. Closed kontact

5. Copied my 4.6 .bashrc and sourced it

6. Started kontact and migrator didn't run, korg has no calendars

kres-migratorrc is still:
[Migration]
Version-calendar=2
Version-contact=2
Comment 4 Stephen Kelly 2011-05-11 21:24:05 UTC
Please try this patch:


diff --git a/migration/kres/kres-migratorrc b/migration/kres/kres-migratorrc
index 3ec1176..1044132 100644
--- a/migration/kres/kres-migratorrc
+++ b/migration/kres/kres-migratorrc
@@ -1,4 +1,4 @@
 [Migration]
 Enabled=true
 SetupClientBridge=false
-TargetVersion=2
+TargetVersion=3

Thanks.
Comment 5 Sergio Martins 2011-05-13 10:34:30 UTC
Git commit 1b5985f80e9e8a8b27d00a9ebe1851fd095eafb4 by Sergio Martins.
Committed on 13/05/2011 at 11:29.
Pushed by smartins into branch 'master'.

Increment the target version so the migrator runs.

CCBUG: 270631

M  +1    -1    migration/kres/kres-migratorrc     

http://commits.kde.org/kdepim-runtime/1b5985f80e9e8a8b27d00a9ebe1851fd095eafb4
Comment 6 Sergio Martins 2011-05-13 10:35:24 UTC
Git commit 7db6ad4620bd322f85077068eb7c3bc505bf423e by Sergio Martins.
Committed on 13/05/2011 at 11:33.
Pushed by smartins into branch 'master'.

Always check legacy kres for migration.

Patch by Volker.

BUG: 270631

M  +12   -1    akonadi/firstrun.cpp     
M  +1    -0    akonadi/firstrun_p.h     

http://commits.kde.org/kdepimlibs/7db6ad4620bd322f85077068eb7c3bc505bf423e
Comment 7 Sergio Martins 2011-05-13 10:36:30 UTC
Git commit eb28c54928d92cf8e82640adc1d82ca16311ef59 by Sergio Martins.
Committed on 13/05/2011 at 11:33.
Pushed by smartins into branch '4.6'.

Always check legacy kres for migration.

Patch by Volker.

BUG: 270631

M  +12   -1    akonadi/firstrun.cpp     
M  +1    -0    akonadi/firstrun_p.h     

http://commits.kde.org/kdepimlibs/eb28c54928d92cf8e82640adc1d82ca16311ef59
Comment 8 Sergio Martins 2011-05-13 10:38:07 UTC
Git commit d9f25199e84d7e35a7c273f7b825b6bbed38f305 by Sergio Martins.
Committed on 13/05/2011 at 11:29.
Pushed by smartins into branch '4.6'.

Increment the target version so the migrator runs.

CCBUG: 270631

M  +1    -1    migration/kres/kres-migratorrc     

http://commits.kde.org/kdepim-runtime/d9f25199e84d7e35a7c273f7b825b6bbed38f305