Always check legacy kres for migration.

Patch by Volker.

BUG: 270631